# open-beep-detect

./: README.md  pyproject.toml
beep_detect/core/: chunk_processor.py  device_input_runner.py  file_input_runner.py  fingerprint_to_chunkmap.py  main.py  time_conversion.py  types.py
beep_detect/web/: __init__.py  ws.py
beep_detect/web/static/js/: main.js
beep_detect/web/templates/: index.html
data/: Microwave finish (fan background).m4a  Washing machine finish.m4a
notebooks/: devices.ipynb  experimentation.ipynb
