[tool.poetry]
name = "beep-detect"
version = "0.1.0"
description = ""
authors = ["Albert Nisbet <albertnis@gmail.com>"]
readme = "README.md"
packages = [{include = "beep_detect"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.10.1"
numpy = "^1.24.2"
pyaudio = "^0.2.13"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
matplotlib = "^3.7.1"
jupyter = "^1.0.0"


[tool.poetry.group.web.dependencies]
flask = "^2.3.1"
twisted = "^22.10.0"
autobahn = "^23.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
